--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LISTUP</title>
+    <title>리스트업 로맨</title>
     <!-- javascript lib -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!-- <script src="./src/js/jquery.smooth.wheel.js"></script> -->
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="./src/css/guide.swiper.css" />
     <link rel="stylesheet" href="./src/css/animation/guide.css" />
     <link rel="stylesheet" href="./src/css/service.css" />
+    <link rel="stylesheet" href="./src/css/animation/service.css" />
     <link rel="stylesheet" href="./src/css/blog.css" />
     <link
       rel="stylesheet"
@@ -307,8 +308,113 @@
           </div>
         </div>
       </div>
-      <div id="service" class="section-service">service</div>
-      <div id="blog" class="section-blog">blog</div>
+      <div id="service" class="section-service">
+        <div class="main-content">
+          <h2 class="service-title">
+            <span class="title-01">데이터로</span>
+            <span class="sub-title">
+              시작하는<br />새로운 쇼핑
+              <span>라이프</span>
+            </span>
+          </h2>
+          <ul class="service-list">
+            <li>
+              <h1 class="idx">01<span>/</span></h1>
+              <div>
+                <div class="img-container">
+                  <img src="./assets/se04_ICON01.png" alt="" />
+                </div>
+                <div class="content-container">
+                  <h2><span>Make </span>your data</h2>
+                  <h3>데이터를 발행해 차곡차곡 쌓는 나만의 아카이브</h3>
+                </div>
+              </div>
+            </li>
+            <li>
+              <h1 class="idx">02<span>/</span></h1>
+              <div>
+                <div class="img-container">
+                  <img src="./assets/se04_ICON02.png" alt="" />
+                </div>
+                <div class="content-container">
+                  <h2><span>Show </span>your lifestyle</h2>
+                  <h3>데이터 태크로 보여주는 나만의 취향과 라이프스타일</h3>
+                </div>
+              </div>
+            </li>
+            <li>
+              <h1 class="idx">03<span>/</span></h1>
+              <div>
+                <div class="img-container">
+                  <img src="./assets/se04_ICON03.png" alt="" />
+                </div>
+                <div class="content-container">
+                  <h2><span>Manage </span>your items</h2>
+                  <h3>나만의 데이터 아카이브를 통한 효율적인 물건관리</h3>
+                </div>
+              </div>
+            </li>
+            <li>
+              <h1 class="idx">04<span>/</span></h1>
+              <div>
+                <div class="img-container">
+                  <img src="./assets/se04_ICON04.png" alt="" />
+                </div>
+                <div class="content-container">
+                  <h2><span>Trade </span>items with data</h2>
+                  <h3>비슷한 취향의 사람들과 하는 아이템 + 데이터 거래</h3>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="blog" class="section-blog">
+        <div class="line-scrolling">
+          <p>
+            my <i>data</i> platform <span>{</span>
+            <img src="./assets/shine.svg" alt="" width="43" />
+            <span>}</span> List up
+            <span>{</span>
+            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <span>}</span>
+          </p>
+          <p>
+            my <i>data</i> platform <span>{</span>
+            <img src="./assets/shine.svg" alt="" width="43" />
+            <span>}</span> List up
+            <span>{</span>
+            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <span>}</span>
+          </p>
+          <p>
+            my <i>data</i> platform <span>{</span>
+            <img src="./assets/shine.svg" alt="" width="43" />
+            <span>}</span> List up
+            <span>{</span>
+            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <span>}</span>
+          </p>
+          <p>
+            my <i>data</i> platform <span>{</span>
+            <img src="./assets/shine.svg" alt="" width="43" />
+            <span>}</span> List up
+            <span>{</span>
+            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <span>}</span>
+          </p>
+          <p>
+            my <i>data</i> platform <span>{</span>
+            <img src="./assets/shine.svg" alt="" width="43" />
+            <span>}</span> List up
+            <span>{</span>
+            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <span>}</span>
+          </p>
+        </div>
+        <div class="blog-posts"></div>
+        <div class="view-more"></div>
+      </div>
     </div>
     <!-- javascript custom-->
     <script src="./src/js/haeder.js"></script>
