--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>리스트업 로맨</title>
+    <title>로맨</title>
     <!-- javascript lib -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!-- <script src="./src/js/jquery.smooth.wheel.js"></script> -->
@@ -18,6 +18,12 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       type="text/css"
@@ -26,11 +32,12 @@
     <link
       rel="https://cdn.rawgit.com/mfd/7c7a915eb31474cc8c6a65066a4c4dc3/raw/f0f2fb94c21dea904812a53e0eb6cf0bc87f3754/GTWalsheimPro.css"
     />
+    <link rel="stylesheet" href="/src/font/font.css" />
     <!-- css -->
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/global.css" />
+    <link rel="stylesheet" href="./src/css/animation/global.css" />
     <link rel="stylesheet" href="./src/css/header.css" />
-    <link rel="stylesheet" href="./src/css/animation/lang_menu.css" />
     <link rel="stylesheet" href="./src/css/main.css" />
     <link rel="stylesheet" href="./src/css/animation/main.css" />
     <link rel="stylesheet" href="./src/css/guide.css" />
@@ -39,6 +46,10 @@
     <link rel="stylesheet" href="./src/css/service.css" />
     <link rel="stylesheet" href="./src/css/animation/service.css" />
     <link rel="stylesheet" href="./src/css/blog.css" />
+    <link rel="stylesheet" href="./src/css/blog.swiper.css" />
+    <link rel="stylesheet" href="./src/css/animation/blog.css" />
+    <link rel="stylesheet" href="./src/css/banner.css" />
+    <link rel="stylesheet" href="./src/css/footer.css" />
     <link
       rel="stylesheet"
       href="./src/css/animation/section-down-load-text.css"
@@ -372,34 +383,34 @@
       <div id="blog" class="section-blog">
         <div class="line-scrolling">
           <p>
-            my <i>data</i> platform <span>{</span>
+            my <i> data </i> platform <span> { </span>
             <img src="./assets/shine.svg" alt="" width="43" />
-            <span>}</span> List up
-            <span>{</span>
+            <span> } </span> List up
+            <span> { </span>
             <img src="./assets/like_up_B.svg" alt="" width="43" />
-            <span>}</span>
+            <span> } </span>
           </p>
           <p>
-            my <i>data</i> platform <span>{</span>
+            my <i>data</i> platform <span> { </span>
             <img src="./assets/shine.svg" alt="" width="43" />
-            <span>}</span> List up
-            <span>{</span>
+            <span> } </span> List up
+            <span> { </span>
             <img src="./assets/like_up_B.svg" alt="" width="43" />
-            <span>}</span>
+            <span> } </span>
           </p>
           <p>
-            my <i>data</i> platform <span>{</span>
+            my <i>data</i> platform <span> { </span>
             <img src="./assets/shine.svg" alt="" width="43" />
-            <span>}</span> List up
-            <span>{</span>
+            <span> } </span> List up
+            <span> { </span>
             <img src="./assets/like_up_B.svg" alt="" width="43" />
-            <span>}</span>
+            <span> } </span>
           </p>
           <p>
-            my <i>data</i> platform <span>{</span>
+            my <i>data</i> platform <span> { </span>
             <img src="./assets/shine.svg" alt="" width="43" />
-            <span>}</span> List up
-            <span>{</span>
+            <span> } </span> List up
+            <span> { </span>
             <img src="./assets/like_up_B.svg" alt="" width="43" />
             <span>}</span>
           </p>
@@ -412,15 +423,138 @@
             <span>}</span>
           </p>
         </div>
-        <div class="blog-posts"></div>
-        <div class="view-more"></div>
+        <div class="blog-posts swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="content">
+                <h1>Welcome to LISTUP</h1>
+                <div class="info">
+                  <div class="type">BLOG</div>
+                  <div class="data">2022-05-29</div>
+                </div>
+              </div>
+              <div
+                class="img-content"
+                style="background-image: url(./assets/post-1.png)"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="content">
+                <h1>Make your data</h1>
+                <div class="info">
+                  <div class="type">BLOG</div>
+                  <div class="data">2022-05-29</div>
+                </div>
+              </div>
+              <div
+                class="img-content"
+                style="background-image: url(./assets/post-2.png)"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="content">
+                <h1>Show your lifestyle</h1>
+                <div class="info">
+                  <div class="type">BLOG</div>
+                  <div class="data">2022-05-29</div>
+                </div>
+              </div>
+              <div
+                class="img-content"
+                style="background-image: url(./assets/post-3.png)"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="content">
+                <h1>Manage your items</h1>
+                <div class="info">
+                  <div class="type">BLOG</div>
+                  <div class="data">2022-05-29</div>
+                </div>
+              </div>
+              <div
+                class="img-content"
+                style="background-image: url(./assets/post-4.png)"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="content">
+                <h1>Trade items with data</h1>
+                <div class="info">
+                  <div class="type">BLOG</div>
+                  <div class="data">2022-05-29</div>
+                </div>
+              </div>
+              <div
+                class="img-content"
+                style="background-image: url(./assets/post-5.png)"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div class="content">
+                <h1>리스트업 유튜브</h1>
+                <div class="info">
+                  <div class="type">BLOG</div>
+                  <div class="data">2022-05-29</div>
+                </div>
+              </div>
+              <div
+                class="img-content"
+                style="background-image: url(./assets/post-6.jpg)"
+              ></div>
+            </div>
+          </div>
+        </div>
+        <div class="view-more">
+          View&nbsp;<span>more</span><span class="open">&nbsp;{&nbsp;</span
+          ><span class="close">&nbsp;}</span>
+        </div>
+        <div class="blog-drag-cursor"></div>
+      </div>
+      <div id="bottom-banner">
+        <img src="./assets/se06Text.png" alt="" />
       </div>
     </div>
+    <footer>
+      <div class="main-content">
+        <ul>
+          <li>
+            <h2>고객센터</h2>
+            <p>help.service.lomen@lomen.kr</p>
+          </li>
+          <li>
+            <h2>고객센터 운영시간</h2>
+            <p>
+              오전10:00~17:00 (점심시간 12:00 ~ 13:00) 토요일,일요일,공휴일 휴무
+            </p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <h2>사업자등록번호</h2>
+            <p>877-86-01567</p>
+          </li>
+          <li>
+            <h2>주소</h2>
+            <p>대구광역시 중구 국채보상로 496 (동산동) 2층 Lomen</p>
+          </li>
+          <li>
+            <h2>대표</h2>
+            <p>박찬용</p>
+          </li>
+        </ul>
+        <div class="copy-right">
+          © 로맨 all rights reserved. design by Lomen
+        </div>
+      </div>
+    </footer>
     <!-- javascript custom-->
     <script src="./src/js/haeder.js"></script>
     <script src="./src/js/text.animation.js"></script>
     <script src="./src/js/guide.horizen.scroll.js"></script>
     <script src="./src/js/guide.intro.swiper.js"></script>
+    <script src="./src/js/blog.swiper.js"></script>
+    <script src="./src/js/banner.screen.js"></script>
     <script src="./src/js/init.js"></script>
   </body>
 </html>
