--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>로맨</title>
     <!-- javascript lib -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <!-- <script src="./src/js/jquery.smooth.wheel.js"></script> -->
-    <script src="./util/jQuery-easeScroll/jquery.easeScroll.js"></script>
-    <script src="./src/js/jquery.easing.js"></script>
+    <!-- <script src="/src/js/jquery.smooth.wheel.js"></script> -->
+    <script src="/util/jQuery-easeScroll/jquery.easeScroll.js"></script>
+    <script src="/src/js/jquery.easing.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -61,7 +61,7 @@
     <div class="header">
       <div class="main-content">
         <div class="section-logo">
-          <img src="./assets/listup_logo.svg" alt="logo" />
+          <img src="/assets/listup_logo.svg" alt="logo" />
         </div>
         <nav class="section-menu">
           <span>
@@ -81,7 +81,7 @@
           </span>
         </nav>
         <div class="section-lang">
-          <img src="./assets/loca_icon.png" alt="lang" width="22" height="22" />
+          <img src="/assets/loca_icon.png" alt="lang" width="22" height="22" />
           <span class="section-lang-local-lang">KOR</span>
           <ul class="section-lang-menu">
             <li>KOR</li>
@@ -96,7 +96,7 @@
       <div id="home" class="section-home">
         <div class="section-home-video-container">
           <video loop autoplay muted playisnline>
-            <source src="./assets/mainVid.mp4" />
+            <source src="/assets/mainVid.mp4" />
           </video>
         </div>
         <div class="main-content">
@@ -104,18 +104,18 @@
             <div class="section-home-title-top">
               <p>Expose Yourself To People</p>
             </div>
-            <img src="./assets/se01_TEXT.png" alt="LOGO image" />
+            <img src="/assets/se01_TEXT.png" alt="LOGO image" />
           </div>
           <div class="section-home-download">
             <div class="google-down">
               <a href="https://www.google.com/" target="_blank"
                 >GOOGLE<br />PLAY</a
               >
-              <img src="./assets/circle_line.png" alt="circle line" />
+              <img src="/assets/circle_line.png" alt="circle line" />
             </div>
             <div class="apple-down">
               <a href="https://www.apple.com/" target="_blank">APP STORE</a>
-              <img src="./assets/circle_line.png" alt="circle line" />
+              <img src="/assets/circle_line.png" alt="circle line" />
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
               href="https://www.google.com/"
               target="_blank"
             >
-              <img src="./assets/google_icon.png" alt="google" />
+              <img src="/assets/google_icon.png" alt="google" />
               Googole Play
             </a>
             <a
@@ -148,7 +148,7 @@
               href="https://www.apple.com"
               target="_blank"
             >
-              <img src="./assets/apple_icon.png" alt="apple" />
+              <img src="/assets/apple_icon.png" alt="apple" />
               App Store
             </a>
           </div>
@@ -160,9 +160,9 @@
             <div class="black-box"></div>
             <div class="guide-intro-title">
               <div class="shine-img">
-                <img src="./assets/se03_shine.png" alt="" width="170" />
+                <img src="/assets/se03_shine.png" alt="" width="170" />
               </div>
-              <img src="./assets/se03_TEXT.png" alt="" width="800" />
+              <img src="/assets/se03_TEXT.png" alt="" width="800" />
               <h2>My data platform</h2>
               <div class="guide-scrolling-animation-container">
                 <span> Keep scrolling ▶ </span>
@@ -186,7 +186,7 @@
                 </div>
               </div>
               <div class="guide-intro-background">
-                <!-- <img src="./assets/se03_IMG01.jpg" alt="" width="1400" /> -->
+                <!-- <img src="/assets/se03_IMG01.jpg" alt="" width="1400" /> -->
                 <div class="guide-intro-img-text-container">
                   <div class="text-01">
                     <span class="text-01-01">After </span>
@@ -214,16 +214,16 @@
                 <div class="intro-box-slide swiper-intro-01">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG02_01.png" alt="" />
+                      <img src="/assets/se03_IMG02_01.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG02_02.png" alt="" />
+                      <img src="/assets/se03_IMG02_02.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG02_03.png" alt="" />
+                      <img src="/assets/se03_IMG02_03.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG02_04.png" alt="" />
+                      <img src="/assets/se03_IMG02_04.png" alt="" />
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -246,16 +246,16 @@
                 <div class="intro-box-slide swiper-intro-02">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG03_01.png" alt="" />
+                      <img src="/assets/se03_IMG03_01.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG03_02.png" alt="" />
+                      <img src="/assets/se03_IMG03_02.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG03_03.png" alt="" />
+                      <img src="/assets/se03_IMG03_03.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG03_04.png" alt="" />
+                      <img src="/assets/se03_IMG03_04.png" alt="" />
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -278,16 +278,16 @@
                 <div class="intro-box-slide swiper-intro-03">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG04_01.png" alt="" />
+                      <img src="/assets/se03_IMG04_01.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG04_02.png" alt="" />
+                      <img src="/assets/se03_IMG04_02.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG04_03.png" alt="" />
+                      <img src="/assets/se03_IMG04_03.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG04_04.png" alt="" />
+                      <img src="/assets/se03_IMG04_04.png" alt="" />
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -310,16 +310,16 @@
                 <div class="intro-box-slide swiper-intro-04">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG05_01.png" alt="" />
+                      <img src="/assets/se03_IMG05_01.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG05_02.png" alt="" />
+                      <img src="/assets/se03_IMG05_02.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG05_03.png" alt="" />
+                      <img src="/assets/se03_IMG05_03.png" alt="" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="./assets/se03_IMG05_04.png" alt="" />
+                      <img src="/assets/se03_IMG05_04.png" alt="" />
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -345,7 +345,7 @@
               <h1 class="idx">01<span>/</span></h1>
               <div>
                 <div class="img-container">
-                  <img src="./assets/se04_ICON01.png" alt="" />
+                  <img src="/assets/se04_ICON01.png" alt="" />
                 </div>
                 <div class="content-container">
                   <h2><span>Make </span>your data</h2>
@@ -357,7 +357,7 @@
               <h1 class="idx">02<span>/</span></h1>
               <div>
                 <div class="img-container">
-                  <img src="./assets/se04_ICON02.png" alt="" />
+                  <img src="/assets/se04_ICON02.png" alt="" />
                 </div>
                 <div class="content-container">
                   <h2><span>Show </span>your lifestyle</h2>
@@ -369,7 +369,7 @@
               <h1 class="idx">03<span>/</span></h1>
               <div>
                 <div class="img-container">
-                  <img src="./assets/se04_ICON03.png" alt="" />
+                  <img src="/assets/se04_ICON03.png" alt="" />
                 </div>
                 <div class="content-container">
                   <h2><span>Manage </span>your items</h2>
@@ -381,7 +381,7 @@
               <h1 class="idx">04<span>/</span></h1>
               <div>
                 <div class="img-container">
-                  <img src="./assets/se04_ICON04.png" alt="" />
+                  <img src="/assets/se04_ICON04.png" alt="" />
                 </div>
                 <div class="content-container">
                   <h2><span>Trade </span>items with data</h2>
@@ -396,42 +396,42 @@
         <div class="line-scrolling">
           <p>
             my <i> data </i> platform <span> { </span>
-            <img src="./assets/shine.svg" alt="" width="43" />
+            <img src="/assets/shine.svg" alt="" width="43" />
             <span> } </span> List up
             <span> { </span>
-            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <img src="/assets/like_up_B.svg" alt="" width="43" />
             <span> } </span>
           </p>
           <p>
             my <i>data</i> platform <span> { </span>
-            <img src="./assets/shine.svg" alt="" width="43" />
+            <img src="/assets/shine.svg" alt="" width="43" />
             <span> } </span> List up
             <span> { </span>
-            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <img src="/assets/like_up_B.svg" alt="" width="43" />
             <span> } </span>
           </p>
           <p>
             my <i>data</i> platform <span> { </span>
-            <img src="./assets/shine.svg" alt="" width="43" />
+            <img src="/assets/shine.svg" alt="" width="43" />
             <span> } </span> List up
             <span> { </span>
-            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <img src="/assets/like_up_B.svg" alt="" width="43" />
             <span> } </span>
           </p>
           <p>
             my <i>data</i> platform <span> { </span>
-            <img src="./assets/shine.svg" alt="" width="43" />
+            <img src="/assets/shine.svg" alt="" width="43" />
             <span> } </span> List up
             <span> { </span>
-            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <img src="/assets/like_up_B.svg" alt="" width="43" />
             <span>}</span>
           </p>
           <p>
             my <i>data</i> platform <span>{</span>
-            <img src="./assets/shine.svg" alt="" width="43" />
+            <img src="/assets/shine.svg" alt="" width="43" />
             <span>}</span> List up
             <span>{</span>
-            <img src="./assets/like_up_B.svg" alt="" width="43" />
+            <img src="/assets/like_up_B.svg" alt="" width="43" />
             <span>}</span>
           </p>
         </div>
@@ -530,7 +530,7 @@
         </div>
       </div>
       <div id="bottom-banner">
-        <img src="./assets/se06Text.png" alt="" />
+        <img src="/assets/se06Text.png" alt="" />
       </div>
     </div>
     <footer>
@@ -567,13 +567,13 @@
       </div>
     </footer>
     <!-- javascript custom-->
-    <script src="./src/js/haeder.js"></script>
-    <script src="./src/js/text.animation.js"></script>
-    <script src="./src/js/guide.horizen.scroll.js"></script>
-    <script src="./src/js/guide.intro.swiper.js"></script>
-    <script src="./src/js/blog.swiper.js"></script>
-    <script src="./src/js/blog.mouse.cursor.js"></script>
-    <script src="./src/js/banner.screen.js"></script>
-    <script src="./src/js/init.js"></script>
+    <script src="/src/js/haeder.js"></script>
+    <script src="/src/js/text.animation.js"></script>
+    <script src="/src/js/guide.horizen.scroll.js"></script>
+    <script src="/src/js/guide.intro.swiper.js"></script>
+    <script src="/src/js/blog.swiper.js"></script>
+    <script src="/src/js/blog.mouse.cursor.js"></script>
+    <script src="/src/js/banner.screen.js"></script>
+    <script src="/src/js/init.js"></script>
   </body>
 </html>
