--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
     />
     <link rel="stylesheet" href="/src/font/font.css" />
     <!-- css -->
-    <link rel="stylesheet" href="./src/css/reset.css" />
-    <link rel="stylesheet" href="./src/css/global.css" />
-    <link rel="stylesheet" href="./src/css/animation/global.css" />
-    <link rel="stylesheet" href="./src/css/header.css" />
-    <link rel="stylesheet" href="./src/css/animation/header.css" />
-    <link rel="stylesheet" href="./src/css/main.css" />
-    <link rel="stylesheet" href="./src/css/animation/main.css" />
-    <link rel="stylesheet" href="./src/css/guide.css" />
-    <link rel="stylesheet" href="./src/css/guide.swiper.css" />
-    <link rel="stylesheet" href="./src/css/animation/guide.css" />
-    <link rel="stylesheet" href="./src/css/service.css" />
-    <link rel="stylesheet" href="./src/css/animation/service.css" />
-    <link rel="stylesheet" href="./src/css/blog.css" />
-    <link rel="stylesheet" href="./src/css/blog.swiper.css" />
-    <link rel="stylesheet" href="./src/css/animation/blog.css" />
-    <link rel="stylesheet" href="./src/css/banner.css" />
-    <link rel="stylesheet" href="./src/css/footer.css" />
+    <link rel="stylesheet" href="/src/css/reset.css" />
+    <link rel="stylesheet" href="/src/css/global.css" />
+    <link rel="stylesheet" href="/src/css/animation/global.css" />
+    <link rel="stylesheet" href="/src/css/header.css" />
+    <link rel="stylesheet" href="/src/css/animation/header.css" />
+    <link rel="stylesheet" href="/src/css/main.css" />
+    <link rel="stylesheet" href="/src/css/animation/main.css" />
+    <link rel="stylesheet" href="/src/css/guide.css" />
+    <link rel="stylesheet" href="/src/css/guide.swiper.css" />
+    <link rel="stylesheet" href="/src/css/animation/guide.css" />
+    <link rel="stylesheet" href="/src/css/service.css" />
+    <link rel="stylesheet" href="/src/css/animation/service.css" />
+    <link rel="stylesheet" href="/src/css/blog.css" />
+    <link rel="stylesheet" href="/src/css/blog.swiper.css" />
+    <link rel="stylesheet" href="/src/css/animation/blog.css" />
+    <link rel="stylesheet" href="/src/css/banner.css" />
+    <link rel="stylesheet" href="/src/css/footer.css" />
     <link
       rel="stylesheet"
-      href="./src/css/animation/section-down-load-text.css"
+      href="/src/css/animation/section-down-load-text.css"
     />
   </head>
   <body>
