--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
               </div>
               <div
                 class="img-content"
-                style="background-image: url(../assets/post-1.png)"
+                style="background-image: url(./assets/post-1.png)"
               ></div>
             </div>
             <div class="swiper-slide">
@@ -460,7 +460,7 @@
               </div>
               <div
                 class="img-content"
-                style="background-image: url(../assets/post-2.png)"
+                style="background-image: url(./assets/post-2.png)"
               ></div>
             </div>
             <div class="swiper-slide">
@@ -473,7 +473,7 @@
               </div>
               <div
                 class="img-content"
-                style="background-image: url(../assets/post-3.png)"
+                style="background-image: url(./assets/post-3.png)"
               ></div>
             </div>
             <div class="swiper-slide">
@@ -486,7 +486,7 @@
               </div>
               <div
                 class="img-content"
-                style="background-image: url(../assets/post-4.png)"
+                style="background-image: url(./assets/post-4.png)"
               ></div>
             </div>
             <div class="swiper-slide">
@@ -499,7 +499,7 @@
               </div>
               <div
                 class="img-content"
-                style="background-image: url(../assets/post-5.png)"
+                style="background-image: url(./assets/post-5.png)"
               ></div>
             </div>
             <div class="swiper-slide">
@@ -512,7 +512,7 @@
               </div>
               <div
                 class="img-content"
-                style="background-image: url(../assets/post-6.jpg)"
+                style="background-image: url(./assets/post-6.jpg)"
               ></div>
             </div>
           </div>
